--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,7 @@ a {
     align-items: center;
 }
 .logo{
-    margin: 0 0 0 -36px;
-    margin: 9px;
+    margin: 3px 0px 3px -36px;
 }
 .logo>a{
     display: block;
@@ -72,6 +71,46 @@ a {
 .btn-mobile span + span{
     margin-top: 8px;
 }
+
+.imageAutoConhecimento{
+    width: 100%;
+    height: 70vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.gallery {
+    width: 44%;
+    position: relative;
+    padding: 2%;
+}
+
+.gallery__image{
+    max-width: 100%;
+}
+
+.gallery__nav{
+    text-align: center;
+    margin-top: 20px;
+}
+
+.gallery__nav-item{
+    color: inherit;
+    text-decoration: none;
+    display: inline-block;
+    background-color: #462755;
+    color: #ffffff;
+    height: 33px;
+    width: 33px;
+    border-radius: 50px;    
+    padding: 9px;
+}
 /* media queries */
 @media screen and (max-width: 768px) {
     ul{
@@ -119,5 +158,33 @@ a {
     }
     .btn-mobile{
         display: block;
+    }
+
+    .wrapper {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .gallery__nav-item {
+        color: inherit;
+        text-decoration: none;
+        background-color: #462755;
+        color: #ffffff;
+        height: 21px;
+        width: 19px;
+        border-radius: 50px;
+        padding: 9px;
+    }
+    .gallery{
+        width: 80%;
+        position: relative;
+        padding: 8%;
+    }
+    .gallery__nav {
+        text-align: center;
+        margin-top: 21px;
+        width: 272px;
     }
 }
