--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ a {
     .nav-primary{
         opacity: 0;        
         position: absolute;
-        top: 95px;
+        top: 83px;
         right: -100%;        
         flex-direction: column;
         align-items: center;     
@@ -164,11 +164,7 @@ a {
     }
 
     .wrapper {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        height: 43vh;
     }
     .gallery__nav-item {
         color: inherit;
@@ -181,13 +177,14 @@ a {
         padding: 9px;
     }
     .gallery{
-        width: 80%;
+        width: 82%;
         position: relative;
         padding: 8%;
     }
     .gallery__nav {
-        text-align: center;
-        margin-top: 21px;
-        width: 272px;
+        width: 230px;
+    }
+    .bannerSelfKnowledge{
+        height: 50vh;
     }
 }
