--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,28 @@ a {
 .description{
     margin: 0;
 }
+.bannerCollege{
+    background-image: url(../assets/faculdade.png);
+    width: 100%;
+    height: 70vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: top;
+}
+.cards{
+    display: flex;
+    width: 80%;
+    margin: 0 auto;
+}
+.card {
+    border-radius: 16px;
+    border: 2px blue solid;
+    width: 256px;
+    padding: 41px;
+    margin: 30px;
+    
+}
+
 /* media queries */
 @media screen and (max-width: 768px) {
     ul{
@@ -186,5 +208,8 @@ a {
     }
     .bannerSelfKnowledge{
         height: 50vh;
+    }
+    .bannerCollege{
+        background-size: contain;
     }
 }
